Fix the .env credential vars

--- a/functions/example/sample.env
+++ b/functions/example/sample.env
@@ -1,6 +1,6 @@
 ### AWS credentials
-AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 AWS_REGION=
 AWS_ROLE_ARN=arn:aws:iam::123456789:role/service-role/myRole1
 
